--- a/css/featurespage.css
+++ b/css/featurespage.css
@@ -22,24 +22,58 @@ body {
 .container__cards {
     display: grid;
     grid-template-columns:repeat(2,400px);
-    gap: 150px;
+    gap: 180px;
     max-width: 1600px;
-    margin-top:100px ;
-    margin-left: 350px;
+    height:auto;
+    margin-top: 90px;
+    justify-content: center;
+    padding: 20px;
     
     
 }
+.card{
+    display: flex;
+    
+    flex-direction: column; 
+    align-items: flex-start;
+    padding: 20px;
+    max-height: 200px;
+    width: 100%;
+    border-radius: 20px;
+    
+
+}
+.container__cards .card {
+    opacity: 0;
+    transform: translateY(100px); 
+    animation: slideIn 0.6s ease forwards;
+}
 
 
+@keyframes slideIn {
+    to {
+        opacity: 1;
+        transform: translateY(0); 
+    }
+}
 
+.card__data {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; 
+    align-items: flex-start; 
+    flex-grow: 1;
+    position: relative;
+    top:-290px;
+    left:260px 
+}
 
 .card h2 {
+    
     font-family: Helvetica, sans-serif ;
     font-size: 1.5rem;
     font-weight: 400;
-    margin-left:172px ;
-    margin-top: -320px;
-    margin-bottom: 40px;
+   
     color: #212353;
     ;
 }
@@ -48,12 +82,9 @@ body {
     font-family: "Nunito Sans", sans-serif;
     font-size: 1rem;
     color: #4B5D68;
-    ;
-    margin-bottom: 0px;
-    max-width: 220px;
-    max-height: 160px;
-    margin-left: 170px;
+    max-width: 280px;
     
+
 }
 
 .card a {
@@ -63,39 +94,78 @@ body {
     
     text-decoration: none;
     font-weight:800;
+    
 }
 
 
 
-.card__image {
-    width: 232px;
-    height: 211px;
-    margin-top: -170px;
-    margin-left: -380px;
+
+
+
+
+
+@media screen and (max-width: 768px) {
+    .features-page{
+        margin-top: 100px;
+        
+    }
+
+    .third__title {
+        font-size: 28px; 
+        margin-top: 20px;
+    }
+
+    .third__paragraph {
+        font-size: 20px; 
+        max-width: 90%; 
+        margin-top: 20px;
+    }
+
+    .container__cards {
+        display: grid;
+        grid-template-columns: 1fr; 
+        gap: 5px; 
+        margin: 10px auto; 
+        justify-content: center; 
+    }
     
+    .card img{
+        max-width: 200px;
+    }
+    
+    .card__data {
+        display: flex;
+        flex-direction: column; 
+        justify-content: space-between; 
+        align-items: flex-start;
+        flex-grow: 1;
+        position: relative;
+        top:-130px;
+        left:80px 
+    }
+
+    .card h2{
+        font-size: 12px;
+    }
+
+    
+
+
+    .card p {
+        font-size: 8px; 
+        max-width: 110px; 
+        
+    }
+
    
-}
-.card__more {
+
     
-    
-    
-    position: relative;
-    top: 50px; 
-    margin-bottom: -100px;
-    margin-left: 170px;
-}
-.card__more2{
-    
-    
-    
-    position: relative;
-    top: 70px; 
-    margin-bottom: -100px;
-    margin-left: 170px;
-}
-.card__more3{
-    position: relative;
-    top: 90px; 
-    margin-bottom: -100px;
-    margin-left: 170px;
+
+    .card a {
+        font-size: 8px; 
+        text-align: center;
+        padding-bottom:18px;
+    }
+
+
 }
