--- a/css/header.css
+++ b/css/header.css
@@ -2,35 +2,68 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 20px; 
+    padding: 0 20px;
+    margin-top: 50px;
+    align-items: center;
+}
+
+.header__exit a {
+    display: none;
+    width: 32px;
+    cursor: pointer;
+}
+
+.header__exit a > img {
+    width: 24px; 
+    max-width: 100%; 
+    position: absolute;
+    top: 42px;
+    right: 30px;
 }
 
 .logo {
-    margin-top:62px ;
-    width: 49px;
-    height: 35px;
-    margin-left: 240px;
+    max-width: 100%;
+}
+
+.header__menu {
+    display: none; 
+    width: 32px;
+    cursor: pointer;
+}
+
+.header__menu > img {
+    max-width: 100%;
+}
+
+.header__menu-icon {
+    width: 40px;
+}
+
+.header__nav {
+    display: flex;
+    align-items: center;
 }
 
 .header__nav ul {
     display: flex;
     list-style: none;
-    margin-right: 410px;
-    
     padding: 0;
+    margin: 0;
 }
 
 .header__nav-item {
     font-family: "Nunito Sans", sans-serif;
     font-size: 16px;
-    margin-left: 60px;
-    margin-top: 65px; 
+    min-width: 100px;
+    display: flex;
+    align-items: center;
 }
 
 .header__nav-item a {
     text-decoration: none;
     color: #4B5D68;
-    
+    padding: 5px 10px;
+    transition: color 0.3s ease;
 }
 
 .header__nav-item a:hover {
@@ -44,18 +77,79 @@
     padding: 10px 20px;
     display: flex;
     align-items: center;
-    margin-top: 44px;
     border: none;
-    white-space: nowrap;
     min-height: 60px;
     min-width: 210px;
     font-size: 16px;
-    margin-right: 1150px;
-    
+    justify-content: center;
+    transition: background-color 0.3s ease;
 }
 
 .arrow-icon {
     width: 20px;
     height: 14px;
-    margin-left: 35px; 
+    margin-left: 10px;
+    color: #000;
+}
+
+.header__request-demo:hover {
+    background-color: #F063B8;
+    color: #F5F5F5;
+}
+
+@media screen and (max-width: 768px) {
+    .header {
+        left: 0;
+        right: 0;
+        
+    }
+
+    .header__request-demo {
+        display: none;
+    }
+
+    .header__menu {
+        display: block;
+    }
+
+    .header__exit a {
+        display: block;
+    }
+
+    
+    .header__nav {
+        position: fixed; 
+        top: 0;
+        left: -100%; 
+        width: 100%;
+        height: 100%; 
+        background-color: white;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        transition: left 0.3s ease; 
+        z-index: 999; 
+    }
+
+    
+    .header__nav.active {
+        left: 0; 
+    }
+
+    .header__nav ul {
+        flex-direction: column;
+        height: 100%;
+        justify-content: center;
+    }
+
+    .header__nav .header__nav-item {
+        margin-right: 0;
+        padding-top: 10vh; 
+        flex: 1;
+        text-align: center; 
+    }
+
+    .header__nav-item a {
+        font-size: 24px;
+    }
 }
