--- a/css/hero.css
+++ b/css/hero.css
@@ -1,45 +1,117 @@
-.hero__container{
-    padding: top 300px; ;
-    margin-left: 240px;
-
+.hero__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 300px;
+    overflow: hidden;
 }
-.hero__title{
 
-    color:#212353;
-    font-size: 80px;
-    font-family: Helvetica, sans-serif;
-    max-width: 580px;
-    margin-left: 240px;
-    margin-top: 240px;
+.hero__content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    opacity: 0;
+    transform: translateX(-100%);
+    animation: slideInLeft 1s forwards;
+}
 
-    
+@keyframes slideInLeft {
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
-.hero__paragraph{
-    color:4B5D68;
-    font-family: "Nunito Sans",sans-serif;
-    font-size: 18px;
-    max-width: 380px;
-    margin-left: 240px;
-    margin-top: 50px;
-    
-}
+
 .hero__girl {
     width: 885px;
     height: 468px;
-    margin-top:-270px;
-    margin-left: 200px;
+    margin-left: 400px;
+    margin-top: -420px;
+    opacity: 0;
+    transform: translateX(100%);
+    animation: slideInRight 1s forwards;
+    animation-delay: 0.5s;
 }
-.hero__button{
-    background-color:#9C69E2;
+
+@keyframes slideInRight {
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+.hero__title {
+    color: #212353;
+    font-size: 80px;
+    font-family: Helvetica, sans-serif;
+    max-width: 580px;
+    margin-top: 240px;
+}
+
+.hero__paragraph {
+    color: #4B5D68;
+    font-family: "Nunito Sans", sans-serif;
+    font-size: 18px;
+    max-width: 380px;
+    margin-top: 50px;
+}
+
+.hero_button {
+    background-color: #9C69E2;
     border-radius: 50px;
     width: 170px;
     height: 60px;
-    margin-left: 240px;
-    margin-top: 10px;
-    border: none;
-
-}
-.hero__button a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     color: white;
-    font-size: 18px;
+    font-size: 15px;
+    text-decoration: none;
+    margin-top: 60px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.hero_button:hover {
+    background-color: #7f52cc;
+}
+
+@media screen and (max-width: 768px) {
+    .hero__container {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding-top: 20px;
+        margin-left: 0;
+        text-align: center;
+    }
+
+    .hero__title {
+        font-size: 40px;
+        margin-top: 90px;
+        max-width: 100%;
+        text-align: center;
+    }
+
+    .hero__paragraph {
+        font-size: 16px;
+        width: 90%;
+        margin-top: 15px;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .hero__girl {
+        display: none;
+    }
+
+    .hero_button {
+        width: 150px;
+        height: 50px;
+        margin-top: 60px;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
